--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.3.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
